--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -10,17 +10,21 @@ jobs:
     runs-on: ubuntu-latest
     
     steps:
-    - uses: actions/checkout@v4
-    
-    - uses: actions/setup-python@v5
+    - name: Checkout code
+      uses: actions/checkout@v4
+      
+    - name: Set up Python
+      uses: actions/setup-python@v5
       with:
         python-version: '3.11'
         
-    - name: Install buildozer
-      run: pip install buildozer kivy
+    - name: Install dependencies
+      run: |
+        pip install buildozer kivy
         
     - name: Build APK
-      run: buildozer android debug
+      run: |
+        buildozer android debug
         
     - name: Upload APK
       uses: actions/upload-artifact@v4
