--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,30 +2,47 @@ name: Build Android APK
 
 on:
   push:
-    branches: [main]
+    branches: [ main ]
   workflow_dispatch:
 
 jobs:
   build:
     runs-on: ubuntu-latest
-    
+
     steps:
     - name: Checkout code
       uses: actions/checkout@v4
-      
+
+    - name: Install system dependencies
+      run: |
+        sudo apt update
+        sudo apt install -y \
+          zip unzip openjdk-17-jdk \
+          python3-pip autoconf libtool pkg-config \
+          zlib1g-dev libncurses5-dev libncursesw5-dev \
+          libtinfo6 cmake libffi-dev libssl-dev
+
     - name: Set up Python
       uses: actions/setup-python@v5
       with:
         python-version: '3.11'
-        
-    - name: Install dependencies
+
+    - name: Install Python dependencies
       run: |
+        python -m pip install --upgrade pip
+        pip install cython==0.29.36
         pip install buildozer kivy
-        
+
+    - name: Initialize Buildozer (if not exists)
+      run: |
+        if [ ! -f buildozer.spec ]; then
+          buildozer init
+        fi
+
     - name: Build APK
       run: |
         buildozer android debug
-        
+
     - name: Upload APK
       uses: actions/upload-artifact@v4
       with:
